<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_white_2"
    tools:context=".Activity.Login.PhoneNumberActivity">

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="47dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:background="@drawable/bg_help_2"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/help"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"
            android:textColor="@color/text_white2"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/what_s_your"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/phone_number"
            android:textColor="@color/green"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:fontFamily="@font/helvetica_regular"
            android:lineSpacingExtra="4dp"
            android:text="@string/let_s_check_if_you_are_already_registered_nwith_us"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_arrowColor="@color/black2"
                app:ccp_autoDetectCountry="true"
                app:ccp_contentColor="@color/text_black2"
                app:ccp_defaultNameCode="IND"
                app:ccp_showFlag="true"
                app:ccp_showFullName="false"
                app:ccp_showNameCode="false" />

            <EditText
                android:id="@+id/txtNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/tran"
                android:fontFamily="@font/helvetica_regular"
                android:inputType="phone"
                android:textColor="@color/text_black2"
                android:textColorHint="@color/black_50_2"
                android:textSize="22sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="12dp"
            android:background="@color/green" />

        <TextView
            android:id="@+id/txtErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/by_continuing_i_agree_to_rolaride_s"
            android:textAlignment="center"
            android:textColor="@color/text_black2"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_amp_conditions"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="12sp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:id="@+id/mainLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/helvetica_bold"
                android:gravity="center"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/text_white2"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/txtLoading"
                android:layout_width="match_parent"
                android:layout_height="48.5dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_loading" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>