<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_white_2"
    tools:context=".Activity.Login.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtn_arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/tran"
                android:src="@drawable/ic_back_2" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="47dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:background="@drawable/bg_help_2"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/help"
                android:textAllCaps="false"
                android:textColor="@color/text_white2"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/enter_your"
                android:textColor="@color/text_black2"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/code"
                android:textColor="@color/green"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:fontFamily="@font/helvetica_regular"
            android:lineSpacingExtra="4dp"
            android:text="@string/we_will_auto_verify_the_one_time_code_sent_nto_your_number"
            android:textColor="@color/text_black2"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputotp1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/tran"
                    android:fontFamily="@font/helvetica_bold"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/text_black2"
                    android:textColorHint="@color/black_50_2"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/inputView1"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputotp2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/tran"
                    android:fontFamily="@font/helvetica_bold"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/text_black2"
                    android:textColorHint="@color/black_50_2"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/inputView2"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputotp3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/tran"
                    android:fontFamily="@font/helvetica_bold"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/text_black2"
                    android:textColorHint="@color/black_50_2"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/inputView3"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputotp4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/tran"
                    android:fontFamily="@font/helvetica_bold"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:text=""
                    android:textColor="@color/text_black2"
                    android:textColorHint="@color/black_50_2"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/inputView4"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/green" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_regular"
                android:text="@string/didn_t_receive_the_code"
                android:textColor="@color/text_black2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/resend"
                android:textColor="@color/green"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/helvetica_bold"
                android:gravity="center"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/text_white2"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/txtLoading"
                android:layout_width="match_parent"
                android:layout_height="48.5dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_loading" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>